--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="css/main.css" />
     <!-- endbuild -->
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap" rel="stylesheet">
+
     <title>Steep'd Home</title>
 
 </head>
@@ -34,8 +38,10 @@
                               <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="custom.html">Customize Your Tea Blend</a>
                             </div>
-                          </li>
-                        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+                        </li>
+                        <li class="nav-item">
+                            <a href="about.html" class="nav-link">About</a>
+                        </li>
                     </ul>
                         
                         <a href="index.html" class="mx-auto" id="navlogo"></a>
@@ -55,7 +61,7 @@
 
     <div class="container main-row">
         <div class="row">
-            <div class="col-xs-12 col-md-8 d-block carousel-div">
+            <div class="col-xs-12 col-md-9 d-block carousel-div">
                 <div id="homeCarousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
@@ -116,11 +122,21 @@
                     Join our community!
                     </h1>
                 </div>
+                <div class="row text-center social">
+                    <h4>Follow: </h4>
+                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                </div>
             </div>
         </div>
 
-        <div class="row">
-            <h1></h1>
+        <div class="row reviews-row">
+            <h1>Reviews</h1>
+                <div class="col-12">
+                    <iframe src="review1.html" title="Iframe Example"></iframe>
+                </div>
         </div>
     </div>
     <footer>
