added collapsed nav logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <nav class="w-100 navbar navbar-expand-sm navbar-light sticky-top">
-        <div class="container p-0">
+        <div class="container mx-auto">
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#steepdNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -55,13 +55,17 @@
                             <input type="text" class="form-control searchfield" placeholder="" aria-label="" aria-describedby="basic-addon1">
                         </div>
                     </span>
+
                 </div>
+                
+                <a href="index.html" id="navlogomobile"></a>
+
         </div>
     </nav>
 
     <div class="container main-row">
-        <div class="row">
-            <div class="col-xs-12 col-md-9 d-block carousel-div">
+        <div class="row home">
+            <div class="col-md-12 col-lg-8 d-block carousel-div">
                 <div id="homeCarousel" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
