added social media bar

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 </head>
 <body>
-    <nav class="w-100 navbar navbar-expand-sm navbar-light sticky-top">
-        <div class="container mx-auto">
+    <nav class="w-100 navbar navbar-expand-md navbar-dark sticky-top">
+        <div class="container navigation">
             
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#steepdNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -125,13 +125,12 @@
                     <h1>
                     Join our community!
                     </h1>
-                </div>
-                <div class="row text-center social">
-                    <h4>Follow: </h4>
-                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
-                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
-                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-                    <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                    <div class="text-center social">
+                        <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                        <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
