--- a/review3.html
+++ b/review3.html
@@ -60,13 +60,13 @@
 <div class="row">
 <nav aria-label="Page navigation example" class="mx-auto">
     <ul class="pagination justify-content-center">
-      <li class="page-item disabled">
-        <a class="page-link" href="#" tabindex="-1">Previous</a>
-      </li>
-      <li class="page-item disabled"><a class="page-link" href="review1.html">1</a></li>
-      <li class="page-item"><a class="page-link" href="review2.html">2</a></li>
-      <li class="page-item"><a class="page-link" href="review3.html">3</a></li>
       <li class="page-item">
+        <a class="page-link" href="review2.html" tabindex="-1">Previous</a>
+      </li>
+      <li class="page-item"><a class="page-link" href="review1.html">1</a></li>
+      <li class="page-item"><a class="page-link" href="review2.html">2</a></li>
+      <li class="page-item disabled"><a class="page-link" href="review3.html">3</a></li>
+      <li class="page-item disabled">
         <a class="page-link" href="#">Next</a>
       </li>
     </ul>
