--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
                 </a>
                 <div class="row join">
-                    <div class="col">
+                    <div class="col pr-5">
                     <h3>
                     Join our community!
                     </h3>
