--- a/review2.html
+++ b/review2.html
@@ -20,36 +20,36 @@
 
 </head>
 <body class="container">
-    <div class="row">
+    <div class="row mb-1">
         <div class="col-3">
-            <img src="img/instagram-3814049.svg" height="100px" alt="user">
+            <img src="img/review-05.png" height="100px" alt="user">
         </div>
         <div class="col-9">
             <p>lorem ipsum</p>
         </div>
     </div>
     
-        <div class="row">
+        <div class="row mb-1">
         <div class="col-3">
-            <img src="img/instagram-3814049.svg" height="100px" alt="user">
+            <img src="img/review-06.png" height="100px" alt="user">
         </div>
         <div class="col-9">
             <p>lorem ipsum</p>
         </div>
     </div>
 
-        <div class="row">
+        <div class="row mb-1">
         <div class="col-3">
-            <img src="img/instagram-3814049.svg" height="100px" alt="user">
+            <img src="img/review-07.png" height="100px" alt="user">
         </div>
         <div class="col-9">
             <p>lorem ipsum</p>
         </div>
     </div>
 
-        <div class="row">
+        <div class="row mb-1">
         <div class="col-3">
-            <img src="img/instagram-3814049.svg" height="100px" alt="user">
+            <img src="img/review-08.png" height="100px" alt="user">
         </div>
         <div class="col-9">
             <p>lorem ipsum</p>
