--- a/review1.html
+++ b/review1.html
@@ -20,36 +20,36 @@
 
 </head>
 <body class="container">
-    <div class="row">
+    <div class="row mb-1">
         <div class="col-3">
-            <img src="img/instagram-3814049.svg" height="100px" alt="user">
+            <img src="img/review-01.png" height="100px" alt="user">
         </div>
         <div class="col-9">
             <p>lorem ipsum</p>
         </div>
     </div>
     
-        <div class="row">
+        <div class="row mb-1">
         <div class="col-3">
-            <img src="img/instagram-3814049.svg" height="100px" alt="user">
+            <img src="img/review-02.png" height="100px" alt="user">
         </div>
         <div class="col-9">
             <p>lorem ipsum</p>
         </div>
     </div>
 
-        <div class="row">
+        <div class="row mb-1">
         <div class="col-3">
-            <img src="img/instagram-3814049.svg" height="100px" alt="user">
+            <img src="img/review-03.png" height="100px" alt="user">
         </div>
         <div class="col-9">
             <p>lorem ipsum</p>
         </div>
     </div>
 
-        <div class="row">
+        <div class="row mb-1">
         <div class="col-3">
-            <img src="img/instagram-3814049.svg" height="100px" alt="user">
+            <img src="img/review-04.png" height="100px" alt="user">
         </div>
         <div class="col-9">
             <p>lorem ipsum</p>
@@ -58,18 +58,18 @@
     
 
 <div class="row">
-<nav aria-label="Page navigation example" class="mx-auto">
-    <ul class="pagination justify-content-center">
-      <li class="page-item disabled">
-        <a class="page-link" href="#" tabindex="-1">Previous</a>
-      </li>
-      <li class="page-item disabled"><a class="page-link" href="review1.html">1</a></li>
-      <li class="page-item"><a class="page-link" href="review2.html">2</a></li>
-      <li class="page-item"><a class="page-link" href="review3.html">3</a></li>
-      <li class="page-item">
-        <a class="page-link" href="#">Next</a>
-      </li>
-    </ul>
+    <nav aria-label="Page navigation example" class="mx-auto">
+        <ul class="pagination justify-content-center">
+            <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1">Previous</a>
+            </li>
+                <li class="page-item disabled"><a class="page-link" href="review1.html">1</a></li>
+                <li class="page-item"><a class="page-link" href="review2.html">2</a></li>
+                <li class="page-item"><a class="page-link" href="review3.html">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="review2.html">Next</a>
+            </li>
+        </ul>
   </nav>
   </div>
 
